- French translation update (https://github.com/zdohnal/system-config-printer/pull/57) 
- Spelling fixes (https://github.com/zdohnal/system-config-printer/pull/58)
- Syntax fixes (https://github.com/zdohnal/system-config-printer/pull/59)
- Python 3.6 invalid escape sequence deprecation fixes (https://github.com/zdohnal/system-config-printer/pull/60)
- Adds printer properties dialog vertical expansion (https://github.com/zdohnal/system-config-printer/pull/61)
- Replace icons deprecated by GTK 3.0 by non-deprecated ones (https://github.com/zdohnal/system-config-printer/pull/62) 
- Improvements of discovered devices/conection type lists in new-printer wizard, more debug output (https://github.com/zdohnal/system-config-printer/pull/65)
- replace libgnome-keyring by libsecret (https://github.com/zdohnal/system-config-printer/issues/51)
- Do not start the applet on GNOME and Cinnamon desktops (https://github.com/zdohnal/system-config-printer/pull/41)
- Do not notify on 'cups-waiting-for-job-completed' because it's not an… (https://github.com/zdohnal/system-config-printer/pull/71)
- Updated Turkish translation (https://github.com/zdohnal/system-config-printer/pull/74)
- Update tr.po (https://github.com/zdohnal/system-config-printer/pull/73)
- TypeError on <dict>.update call (https://github.com/zdohnal/system-config-printer/issues/76)
- build: Install appstream metadata to non-deprecated location #77 (https://github.com/zdohnal/system-config-printer/pull/77)
- Addition of some strings for i18n (https://github.com/zdohnal/system-config-printer/pull/81)
- Update .po and .pot files
- added GenericName and X-GNOME-FullName to system-config-printer.desktop.in (https://github.com/zdohnal/system-config-printer/issues/20)
- removed some deprecated parts of gui
- updated translations by files from Zanata
- s-c-p doesn't react on ALREADY_ENABLED exception from firewalld
- removed deprecated Gtk objects
- another deprecated issues - GLib