@@ -28,3 +28,4 @@
 - s-c-p doesn't react on ALREADY_ENABLED exception from firewalld
 - removed deprecated Gtk objects
 - another deprecated issues - GLib
+- parent attribute in Gtk.Dialog is deprecated - use transient_for
